<resources>
    <string name="app_name">Egresa2</string>
    <string name="lbl_iniciar">Iniciar sesion</string>
    <string name="lbl_correo">Correo electronico</string>
    <string name="lbl_contraseña">Contraseña</string>
    <string name="lbl_confirmarContraseña">Confirmar contraseña</string>
    <string name="lbl_ingresar">Ingresar</string>
    <string name="lbl_registrar1">¿No tiene cuenta?</string>
    <string name="lbl_frase">Un lugar para crecer</string>
    <string name="op_modificar">Modificar mi perfil</string>
    <string name="op_controlPub">Control de publicaciones</string>
    <string name="op_pubPendientes">Publicaciones pendientes</string>
    <string name="op_cerrarSesion">Cerrar sesion</string>
    <string name="op_eliminarCuenta">Eliminar mi cuenta</string>
    <string name="lbl_registro">Regístrate</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_telefono">Telefono</string>
    <string name="lbl_control">No.Control</string>
    <string name="lbl_carrera">Carrera</string>
    <string name="lbl_ocupacion">Ocupacion</string>
    <string name="lbl_lugar_ocupacion">Lugar de ocupacion</string>
    <string name="lbl_titulo">¿Cuenta con titulo?</string>
    <string name="btn_si">Si</string>
    <string name="btn_no">No</string>
    <string name="btn_registro">Registrarse</string>
    <string name="lbl_mi_pub">Mi publicacion</string>
    <string name="btn_publicar">Finalizar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="lbl_mispib">Mis publicaciones</string>
    <string name="popup_menu_delete">Eliminar</string>
    <string name="popup_menu_edit">Editar</string>
    <string name="popup_menu_hide">Ocultar</string>
    <string name="popup_menu_show">Reactivar</string>
    <string name="Categoria">Selecciona categoria</string>


    <string-array name="lista">
        <item>Ing. En sistemas computacionales</item>
        <item>Lic. En administracion</item>
        <item>Ing. Biomedica</item>
        <item>Lic. en contaduria</item>
    </string-array>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>